change script